# codex-refactor-loop

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.agents/skills/execplan-create/: SKILL.md
.agents/skills/execplan-improve/: SKILL.md
.agents/skills/find-best-refactor/: SKILL.md
.agents/skills/find-best-refactor/agents/: openai.yaml
.agents/skills/implement-execplan/: SKILL.md
.agents/skills/review-recent-work/: SKILL.md
.agents/skills/review-recent-work/agents/: openai.yaml
shell_skills/: app_server_client.py  run_cycle.py
tests/: test_run_cycle.py
tests/fixtures/: fake_app_server.py  fake_codex_cli.py
